kubernetes/mesh-deployment/003_fhir-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fhir-service
spec:
  selector:
    app: fhir-server
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080
  type: ClusterIP
