kubernetes/mesh-deployment/002_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: idea-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:      
      number: 80      
      name: http      
      protocol: HTTP    
    hosts:    
    - 127.0.0.1 # for local testing purposes
